--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="searchBar">
 
             <form  id="searchForm" >
-                <input id="searchText" onblur="hideSearchList()" oninput="getSearchResults()" onfocus="getSearchResults()" onsubmit="getSearchResults()" type="text" placeholder="Search Here">
+                <input id="searchText" onblur="hideSearchList()"  oninput="getSearchResults()" onfocus="getSearchResults()" type="text" placeholder="Search Here">
             </form>
         </div>
 
