--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav>
         <div id="title">
-            Movify
+            <h1>Movify</h1>
         </div>
         
         <div id="searchBar">
